examples/test/testpolicy18774.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18774
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key23: value31
      key28: value17
      key19: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value31
          key4: value37
      podSelector:
        matchLabels:
          key27: value15
          key33: value0
          key45: value43
